# FoodHolloway

./: README.md
FoodBackend/: .env  aiintegration.py  app.py  emailclient.py  places.db  placesdatabase.py  pyproject.toml  reviews.db  searches.py  summaries.sqlite3  test.py
FoodFrontend/: .gitignore  FoodFrontend.csproj  Program.cs  _Imports.razor  libman.json
FoodFrontend/Code/Model/: LitePoi.cs  Poi.cs  ReviewListResponse.cs  ReviewRequestCreate.cs  ReviewRequestResponse.cs  ReviewResponse.cs  ReviewStatsResponse.cs
FoodFrontend/Code/Services/: PoiQueryService.cs
FoodFrontend/Components/: Icon.razor  StarRating.razor
FoodFrontend/Pages/: Home.razor  Home.razor.css  PoiPage.razor  ReviewPage.razor  ReviewPage.razor.cs  Search.razor  Search.razor.cs
FoodFrontend/Properties/: launchSettings.json
FoodFrontend/wwwroot/: appsettings.Development.json  appsettings.Production.json  index.html  manifest.webmanifest
FoodFrontend/wwwroot/css/: app.css
